--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "//1": "describes your app and its dependencies",
   "//2": "https://docs.npmjs.com/files/package.json",
   "//3": "updating this file will download and update your packages",
-
   "name": "my-glitch-app",
   "version": "0.0.1",
   "description": "What am I about?",
@@ -10,10 +9,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "mongodb": "^2.2.33",
-    "valid-url": "^1.0.9",
-    "shortid": "^2.2.8"
+    "shortid": "^2.2.8",
+    "valid-url": "^1.0.9"
   },
   "engines": {
     "node": "9.x"
